--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.19",
     "jsdom": "^22.1.0",
+    "tailwindcss": "^3.4.3",
     "vite": "^4.5.3",
     "vitest": "^0.34.6"
   }
